@@ -2,20 +2,54 @@
 # Dist::Zilla::Plugin::Author::SKIRMESS::RepositoryBase 0.027
 
 language: perl
-perl:
-  - '5.26'
-  - '5.24'
-  - '5.22'
-  - '5.20'
-  - '5.18'
-  - '5.16'
-  - '5.14'
-  - '5.12'
-  - '5.10'
-before_install:
-  - export AUTOMATED_TESTING=1
+
+cache:
+  directories:
+    - ~/perl5
+
+env:
+  global:
+    - AUTOMATED_TESTING=1
+
+matrix:
+  include:
+    - perl: '5.8'
+
+    - perl: '5.10'
+      env: AUTHOR_TESTING=1
+
+    - perl: '5.12'
+      env: AUTHOR_TESTING=1
+
+    - perl: '5.14'
+      env: AUTHOR_TESTING=1
+
+    - perl: '5.16'
+      env: AUTHOR_TESTING=1
+
+    - perl: '5.18'
+      env: AUTHOR_TESTING=1
+
+    - perl: '5.18'
+      env: AUTHOR_TESTING=1
+      os: osx
+
+    - perl: '5.20'
+      env: AUTHOR_TESTING=1
+
+    - perl: '5.22'
+      env: AUTHOR_TESTING=1
+
+    - perl: '5.24'
+      env: AUTHOR_TESTING=1
+
+    - perl: '5.26'
+      env: AUTHOR_TESTING=1
+
 install:
-  - cpanm --quiet --installdeps --notest --skip-satisfied --with-develop .
+  - if [ -n "$AUTHOR_TESTING" ]; then cpanm --quiet --installdeps --notest --skip-satisfied --with-develop .; fi
+  - if [ -z "$AUTHOR_TESTING" ]; then cpanm --quiet --installdeps --notest --skip-satisfied .; fi
+
 script:
   - perl Makefile.PL && make test
-  - test -d xt/author && prove -lr xt/author
+  - if [ -n "$AUTHOR_TESTING" ]; then prove -lr xt/author; fi
