@@ -7,8 +7,8 @@ copyright_holder = Sven Kirmess
 
 [Bootstrap::lib]
 [@Author::SKIRMESS]
-Author::SKIRMESS::RepositoryBase.stopwords[appveyor]        = appveyor
 Author::SKIRMESS::RepositoryBase.stopwords[AppVeyor]        = AppVeyor
+Author::SKIRMESS::RepositoryBase.stopwords[appveyor]        = appveyor
 Author::SKIRMESS::RepositoryBase.stopwords[dist]            = dist
 Author::SKIRMESS::RepositoryBase.stopwords[perlcriticrc]    = perlcriticrc
 Author::SKIRMESS::RepositoryBase.stopwords[perltidy]        = perltidy
@@ -16,7 +16,7 @@ Author::SKIRMESS::RepositoryBase.stopwords[perltidyrc]      = perltidyrc
 Author::SKIRMESS::RepositoryBase.stopwords[SKIRMESS]        = SKIRMESS
 Author::SKIRMESS::RepositoryBase.stopwords[travis]          = travis
 Author::SKIRMESS::RepositoryBase.stopwords[TravisCI]        = TravisCI
-Author::SKIRMESS::RepositoryBase.travis_ci_ignore_perl[5.8] = 5.8
+Author::SKIRMESS::RepositoryBase.travis_ci_no_author_testing_perl[5.8] = 5.8
 Git::FilePermissions.perms[maint]                           = ^maint/ 0755
 
 [Prereqs::Plugins]
